@@ -3,6 +3,8 @@
 - Improved the 'system.pm' graph with more detailed information about processes
   (sleeping, waiting I/O, zombie, stopped, paging and running). It also
   includes two new graphs: entropy and uptime.
+- Changed the way how scales the memory graph in 'system.pm', now the units are
+  in bytes, so the y-axis will scale accordingly.
 - Changed to be more thickness the lines of Greylisting graph in 'mail.pm'.
 - Fixed an undeclared global symbol "$imgfmt_lc" in 'traffacct.pm'.
 
